--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="View the infographics on the Page regarding the US projects and budgeting.">
+    <meta name="author" content="Michael Dyrbus">
+    <link rel="shortcut icon" href="images/favicon2.ico">
+   
+    <title>Starter Template for Bootstrap</title>
+	<!-- d3js -->
+	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+	
+    <!-- Custom styles for this template -->
+    <link href="css/infographic-theme.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">Mike's Infographics</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="#Data">Data</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">References</a></li>
+			
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <div class="container">
+	
+      <div class="starter-template">
+        <h1>USA's Government Project Infographics</h1>
+        <p class="lead">Two infographics have been designed and developed to represent data regarding USA's projects. '</p>
+      </div>
+
+	 	  
+	  <div style="width: 45%; float: left;"> <h2><a href="plot.html">Scatter Plot</a></h2>
+		 <p> The aim of the scatter plot is to allow analysis to see if there is any correlation between cost and schedule varience when looking at the project size. The circles represent the different levels of cost, with the locations on the axis showing the variations. There is basic zooming into areas, and allows selections to highlight different departments to see and compare how they are performing.  </p> </div>
+	  <div style="margin-left: 55%;"> <h2><a href="stream.html">Streamograph</a></h2>
+  		 <p> The streamograph is useful for determining how the project budget is allocated. It clearly shows how it is divided, by department, investment area, and project. It's aim is to show instantly how the project budget is divided, and the internal seperations of each department. It allows dynamic interaction, being able to filter down by department and suchlike to allow in depth analysis. </p>		   </div>
+	  
+	  
+	  
+	  
+	  </div>
+		  
+    </div><!-- /.container -->
+
+
+        <script src="script.js" type="text/javascript" ></script>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+  </body>
+</html>
