--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 	 	  
 	  <div style="width: 45%; float: left;"> <h2><a href="plot.html">Scatter Plot</a></h2>
 		 <p> The aim of the scatter plot is to allow analysis to see if there is any correlation between cost and schedule varience when looking at the project size. The circles represent the different levels of cost, with the locations on the axis showing the variations. There is basic zooming into areas, and allows selections to highlight different departments to see and compare how they are performing.  </p> </div>
-	  <div style="margin-left: 55%;"> <h2><a href="stream.html">Streamograph</a></h2>
-  		 <p> The streamograph is useful for determining how the project budget is allocated. It clearly shows how it is divided, by department, investment area, and project. It's aim is to show instantly how the project budget is divided, and the internal seperations of each department. It allows dynamic interaction, being able to filter down by department and suchlike to allow in depth analysis. </p>		   </div>
+	  <div style="margin-left: 55%;"> <h2><a href="stream.html">Sunburst</a></h2>
+  		 <p> The sunburst is useful for determining how the project budget is allocated. It clearly shows how it is divided, by department, investment area, and project. It's aim is to show instantly how the project budget is divided, and the internal seperations of each department. It allows dynamic interaction, being able to filter down by department and suchlike to allow in depth analysis. </p>		   </div>
 	  
 	  
 	  
