--- a/plot.html
+++ b/plot.html
@@ -29,28 +29,27 @@
 </head>
 
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button class="navbar-toggle" data-target=".navbar-collapse"
-                data-toggle="collapse" type="button"><span class=
-                "sr-only">Toggle navigation</span></button> <a class=
-                "navbar-brand" href="index.html">Mike's Infographics</a>
-            </div>
 
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-
-                    <li><a href="#Data">Data</a></li>
-
-                    <li><a href="#about">About</a></li>
-
-                    <li><a href="#contact">References</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">Mike's Infographics</a>
         </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="data.html">References</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     </div>
+    
 
     <div class="container">
         <div id="topdiv">
@@ -76,7 +75,7 @@
     <script>
 
     //Sets margin for the infographic
-    var margin = {top: 20, right: 200, bottom: 30, left: 60},
+    var margin = {top: 20, right: 600, bottom: 30, left: 60},
         totalwidth=($(window).width()<910)?960:$(window).width()-50;
         width = totalwidth - margin.left - margin.right,
         height = 500 - margin.top - margin.bottom;
