added link to dataset

--- a/data.html
+++ b/data.html
@@ -54,7 +54,9 @@
 	
       <div class="starter-template">
         <h1>Data</h1>
-        <p class="lead">The data was open data from the Projects dataset available at USA's<a href="https://www.itdashboard.gov/data_feeds"> Government Dashboard</p>
+        <p class="lead">The data was open data from the Projects dataset available at USA's<a href="https://www.itdashboard.gov/data_feeds"> Government Dashboard</a></p>
+		<p>You can download the file   <a href="data/Projects.csv" target="_blank">here</a></p>
+		
       </div>
 
 
