--- a/stream.html
+++ b/stream.html
@@ -57,6 +57,8 @@
 
     <div class="container">
 	<h1>Zoomable Sunburst</h1>
+	Enable Labels 
+	<input id="labelson" type="checkbox" name="labels" value=true>
 		<div id="data">
 			<div id="graph" style="float: left; width:70% "></div>
 			<div id="key"  style="float: left; width:30%" > </div>
@@ -112,7 +114,7 @@
 	    	.value(function(d) { return d.values; })
 			.children(function(d){return d.values;});
 
-		data=darstardlydata;
+		var data=darstardlydata;
 		var shiftx=d3.extent(data, function(d) { return  parseFloat(d['Schedule Variance (in days)']); });
 		//sets the data from the columns used
 	    data.forEach(function(d) {
@@ -184,7 +186,6 @@
   	                  .style("opacity", 0);   
   	          });
   	  ;
-	  
 	  
 	  var text = g.append("text")
 	    .attr("x", function(d) { return y(d.y); })
