--- a/stream.html
+++ b/stream.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Michael Dyrbus">
     <link rel="shortcut icon" href="images/favicon2.ico">
    
-    <title>Starter Template for Bootstrap</title>
+    <title>Sunburst graph</title>
 
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<!-- d3js -->
@@ -46,9 +46,10 @@
             <a class="navbar-brand" href="index.html">Mike's Infographics</a>
           </div>
           <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="data.html">References</a></li>
+            <li ><a href="index.html">Home</a></li>
+            <li ><a href="plot.html">Scatter</a></li>
+            <li class="active"><a href="stream.html">Sunburst</a></li>
+            <li ><a href="data.html">References</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -56,14 +57,7 @@
     
 
     <div class="container">
-	<h1>Zoomable Sunburst</h1>
-	Enable Labels 
-	<input id="labelson" type="checkbox" name="labels" value=true>
-		<div id="data">
-			<div id="graph" style="float: left; width:70% "></div>
-			<div id="key"  style="float: left; width:30%" > </div>
-		</div>
-		  
+	<h1>Zoomable Sunburst</h1>		  
     </div><!-- /.container -->
 	<script>
 
