--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Michael Dyrbus">
     <link rel="shortcut icon" href="images/favicon2.ico">
    
-    <title>Starter Template for Bootstrap</title>
+    <title>D3 Infographics</title>
 	<!-- d3js -->
 	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <!-- Bootstrap core CSS -->
@@ -42,8 +42,10 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="data.html">References</a></li>
+            <li class="active"><a href="index.html">Home</a></li>            
+			<li ><a href="plot.html">Scatter</a></li>
+            <li ><a href="stream.html">Sunburst</a></li>
+            <li ><a href="data.html">References</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
