--- a/plot.html
+++ b/plot.html
@@ -59,12 +59,12 @@
             <h1>Scatter Graph</h1>
 
             <h2>Information</h2>
-        </div>Click here too zoom In:<button id="zoomin">in</button> click here to zoom out:<button id="zoomout">out</button>
-        <button id="update">Update axes</button> 
+        </div>Click here too zoom In:<button id="zoomin"><span class="glyphicon glyphicon-plus"></span></button> click here to zoom out:<button id="zoomout"><span class="glyphicon glyphicon-minus"></span></button><br/>
+        <br/>
 		x:<input id="x1" type="number"> to
-        <input id="x2" type="number">  y:<input id="y1" type="number"> to <input id=
-        "y2" type="number">
-
+        <input id="x2" type="number"> <br/> y:<input id="y1" type="number"> to <input id=
+        "y2" type="number"><br/>
+		<button id="update">Update</button> 
         <div id="bottomdiv"></div>
 
         <h2>How to Use</h2>
