--- a/stream.html
+++ b/stream.html
@@ -46,11 +46,12 @@
             <a class="navbar-brand" href="index.html">Mike's Infographics</a>
           </div>
           <div class="collapse navbar-collapse">
-            <li ><a href="index.html">Home</a></li>
-            <li ><a href="plot.html">Scatter</a></li>
-            <li class="active"><a href="stream.html">Sunburst</a></li>
-            <li ><a href="data.html">References</a></li>
-            </ul>
+	          <ul class="nav navbar-nav">
+	            <li ><a href="index.html">Home</a></li>            
+				<li ><a href="plot.html">Scatter</a></li>
+	            <li class="active"><a href="stream.html">Sunburst</a></li>
+	            <li ><a href="data.html">References</a></li>
+	          </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
